<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valR"
            android:hint="@string/r_value"
            android:inputType="number|numberSigned|numberDecimal"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/valDeg"
            android:hint="@string/degree_value"
            android:inputType="number|numberSigned|numberDecimal"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewCalculate"
        android:text="@string/calculateButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:padding="20dp"
        />


    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewHasil"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20sp"/>


</LinearLayout>
