<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryPol"
            android:theme="@style/AppTheme.PopupOverlay"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/firstVal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/firstVal"
                android:inputType="number|numberDecimal|numberSigned"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/secondVal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/secondVal"
                android:inputType="number|numberDecimal|numberSigned"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_below="@id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:padding="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:id="@+id/rectangularButton"
            android:text="@string/to_rectangular"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:id="@+id/polarButton"
            android:text="@string/to_polar"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

    <TextView
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/viewHasil"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:textSize="20sp"/>

</RelativeLayout>